# swagger-spec.yaml
@@ -343,51 +343,7 @@ components:
           type: boolean
           description: whether or not this transaction hash exists
         Transaction:
-          type: object
-          description: transaction information
-          properties:
-            Id:
-              type: string
-              description: transaction ID (generated by ATLOS)
-            SubscriptionId:
-              type: string
-              description: subscription ID (generated by ATLOS)
-            MerchantId:
-              type: string
-              description: your merchant ID
-            OrderId:
-              type: string
-              description: the order ID you passed to the widget or the API as orderId
-            Amount:
-              type: number
-              description: the amount of asset received
-            AssetCode:
-              type: string
-              description: asset code
-            BlockchainCode:
-              type: string
-              description: blockchain code
-            Fee:
-              type: string
-              description: the amount of the commission fee collected
-            SenderAddress:
-              type: string
-              description: for EVM blockchains, the sender's wallet address
-            RecipientAddress:
-              type: string
-              description: the receiving wallet address
-            BlockchainHash:
-              type: string
-              description: blockchain transaction hash (a.k.a. blockchain transaction ID)
-            BlockNumber:
-              type: number
-              description: blockchain block height
-            TimeSent:
-              type: string
-              description: time when the transaction was recorded in a block
-            Status:
-              type: number
-              description: 100 (success)
+          $ref: '#/components/schemas/Transaction'
     CancelPostRequest:
       type: object
       properties:
